--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceFolder}/build/main.exe",
-      "args": ["5", "test.txt"],
+      "args": ["../test.cpp", "../Corpus/CPP"],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}/build",
       "environment": [],
