--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,12 @@
     "stop_token": "cpp",
     "thread": "cpp",
     "condition_variable": "cpp",
-    "semaphore": "cpp"
+    "semaphore": "cpp",
+    "unordered_set": "cpp",
+    "any": "cpp",
+    "csignal": "cpp",
+    "cstdarg": "cpp",
+    "ranges": "cpp",
+    "valarray": "cpp"
   }
 }
